fix letter spacing

--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -48,7 +48,7 @@ body
     float: left
     margin-left: 60px
   h1
-    font-weight: 200
+    font-weight: 500
     margin: 0
     font-size: 2.5em
     line-height: 2em
@@ -62,7 +62,7 @@ body
     margin: 1em 0
     font-size: 1.05em
     font-weight: 600
-    letter-spacing: .1em
+    letter-spacing: 0.04em
     min-width: 8em
     text-align: center
     &:not(:last-child)
@@ -137,7 +137,7 @@ body
     h2
       color: $green
       font-size: 1.5em
-      font-weight: 400
+      font-weight: 500
       margin: 0
       padding: .5em 0
     p
